# ai-l10n-studio

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitlinguistics  .prettierignore  .prettierrc  AGENTS.md  API_UNIFICATION_CHECKLIST.md  API_UNIFICATION_SUMMARY.md  ARCHITECTURE_IMPROVEMENT_COMPLETE.md  ASYNC_OPTIMIZATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  LICENSE  NEXTEST_SETUP.md  OPTIMIZATION_REPORT.md  PERFORMANCE_MONITORING_CHANGES.md  PROJECT_STRUCTURE.md  README.md  build_error.txt  build_output.txt  build_output_final.txt  devtools.html  index.html  package-lock.json  package.json  run.py  setup.py  task_state_20251006_内置词库查询优化.md  task_state_20251006_功能优化_累计统计和保存.md  task_state_20251006_性能优化.md  task_state_20251006_拖拽导入和快捷键.md  tsconfig.json  vite.config.ts  vitest.config.ts  性能优化施工总结.md
.claude/: settings.local.json
.config/: nextest.toml
.cursor/plans/: clash-verge-------73092a41.plan.md
.github/: NEXTEST_INSTALL.md  dependabot.yml
.github/workflows/: OPTIMIZATION.md  README.md  build.yml  check.yml  codeql.yml  release.yml  ui-e2e.yml
.specify/memory/: constitution.md
data/: .gitkeep  translation_memory.json
docs/: AI_ARCHITECTURE_CHANGELOG.md  AI_FRONTEND_INTEGRATION.md  AI_INTEGRATION_SUMMARY.md  API.md  API_UNIFICATION_REPORT.md  ARCHITECTURE_DECISION_TAURI_PARAMS.md  Architecture.md  CHANGELOG.md  CODE_SIMPLIFICATION_REPORT.md  COLOR_FIX_RECORD.md  COLOR_SYSTEM.md  DataContract.md  ERRORS.md  FULL_CODE_SIMPLIFICATION_REPORT.md  GUI-ARCHITECTURE.md  MIGRATION_PLAN.md  README.md  REVIEW-2026-03-22-final.md  REVIEW-2026-03-22.md  SECURITY_NOTES.md  TESTING_GUIDE.md  THEME.md  Token优化说明.md  v3.1更新说明.md  前后端类型统一规范.md  升级说明.md  去重翻译优化说明.md  对话上下文架构说明.md  性能优化完成报告.md  更新总结.md  翻译记忆库生命周期.md  翻译记忆库规则优化.md  翻译记忆库说明.md
docs/archive/: API_REFERENCE_V2.md  ARCHITECTURE_OVERVIEW.md  README.md  专业翻译提示词.md
e2e-tests/: .env.example  README.md  midscene-wdio.cjs  package-lock.json  package.json  wdio.conf.cjs
e2e-tests/scripts/: run-wdio.cjs
e2e-tests/specs/: ai-smoke.e2e.cjs  app.e2e.cjs
example-plugins/: README.md
example-plugins/claude-ai/: models.rs  plugin.toml  provider.rs
example-plugins/custom-llm/: plugin.toml  provider.rs
example-plugins/gemini-ai/: plugin.toml  provider.rs
localization/en/: X_ToolkitTest.po
localization/zh-Hans/: X_ToolkitTest.po
log/: .gitkeep  translation_report_20251006_023921.txt
memory/: MEMORY.md
plugins/claude-ai/: plugin.toml  provider.rs
plugins/deepseek/: plugin.toml  provider.rs
plugins/doubao/: plugin.toml  provider.rs
plugins/gemini-ai/: plugin.toml  provider.rs
plugins/minimax/: plugin.toml
plugins/moonshot/: plugin.toml  provider.rs
po-translator-gui/: ARCHITECTURE_COMPARISON.md  ARCHITECTURE_OVERVIEW.md  CHECKLIST.md  CLAUDE.md  FEATURES_STATUS.md  FEATURE_EXPANSION_PLAN.md  FINAL_CHECK.md  PHASE7_COMPLETION_SUMMARY.md  PLUGIN_INTEGRATION_ROADMAP.md  QUICK_API_REFERENCE.md  QUICK_REFERENCE_CARD.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  RUST_REFACTORING_REPORT.md  TESTING_GUIDE.md  TODO_IMPROVEMENTS.md  UI_IMPROVEMENTS.md  package-lock.json  package.json  package.json.backup  test-sample.po  tsconfig.json  vitest.config.ts
po-translator-gui/src-tauri/: .ignore  Cargo.toml  Cargo.toml.backup  build.rs  tauri.conf.json  tauri.conf.json.backup  tsconfig.json
po-translator-gui/src-tauri/capabilities/: main-window.json  notification.json  translation.json  updater.json
po-translator-gui/src-tauri/data/: translation_memory.json
po-translator-gui/src-tauri/src/: lib.rs  main.rs
po-translator-gui/src-tauri/src/commands/: ai_config.rs  file_format.rs  language.rs  mod.rs  system.rs  translator.rs
po-translator-gui/src-tauri/src/services/: ai_translator.rs  batch_translator.rs  config_manager.rs  file_format.rs  language_detector.rs  mod.rs  po_parser.rs  term_library.rs  translation_memory.rs
po-translator-gui/src-tauri/src/utils/: common.rs  logger.rs  mod.rs  path_validator.rs  progress_throttler.rs
po-translator-gui/src-tauri/tests/: config_manager_test.rs  is_simple_phrase_test.rs
scripts/: README.md  check-unused-i18n.js  portable.js  refactor-error-handling.js
src/: AGENTS.md  App.css  App.tsx  AppShell.tsx  batch_translate.py  devtools.tsx  index.css  main.tsx  po_translator.py  translate.py  translation_memory.py  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  file-operations.json  main-window.json  notification.json  store.json  translation.json  updater.json  window.json
src-tauri/data/: translation_memory.json
src-tauri/icons/: icon.icns
src-tauri/src/: AGENTS.md  error.rs  lib.rs  main.rs
src-tauri/src/commands/: ai_config.rs  ai_model_commands.rs  config_sync.rs  file_format.rs  language.rs  mod.rs  prompt_log.rs  system.rs  translator.rs
src-tauri/src/services/: AGENTS.md  ai_translator.rs  batch_progress_channel.rs  batch_translator.rs  config_draft.rs  config_manager.rs  file_chunker.rs  file_format.rs  language_detector.rs  mod.rs  po_parser.rs  prompt_builder.rs  prompt_logger.rs  term_library.rs  translation_memory.rs  translation_stats.rs  translation_task.rs
src-tauri/src/services/ai/: cost_calculator.rs  mod.rs  model_info.rs  plugin_config.rs  plugin_loader.rs  provider.rs
src-tauri/src/services/ai/models/: deepseek.rs  minimax.rs  mod.rs  moonshot.rs  openai.rs  zhipuai.rs
src-tauri/src/services/ai/providers/: deepseek.rs  minimax.rs  mod.rs  moonshot.rs  openai.rs  zhipuai.rs
src-tauri/src/services/tests/: ai_translator_tests.rs  batch_translator_simple_tests.rs  mod.rs  po_parser_tests.rs
src-tauri/src/utils/: async_io.rs  common.rs  draft.rs  i18n.rs  init.rs  logger.rs  logging.rs  mod.rs  path_validator.rs  paths.rs  progress_throttler.rs
src-tauri/tests/: ai_translator_progress_test.rs  config_manager_test.rs  contextual_refine_test.rs  file_format_test.rs  is_simple_phrase_test.rs  provider_type_test.rs
tools/: README.md  analyze_po.py  compare_translations.py  manage_tm.py  quick_check.py  test_translator.py
(+257 files in other folders)
